--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 
 
 
-<title>CEM Lab</title>
+<title>index.knit</title>
 
-<script src="site_libs/header-attrs-2.9/header-attrs.js"></script>
-<script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
+<script src="site_libs/header-attrs-2.14/header-attrs.js"></script>
+<script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="site_libs/bootstrap-3.3.5/css/yeti.min.css" rel="stylesheet" />
 <script src="site_libs/bootstrap-3.3.5/js/bootstrap.min.js"></script>
@@ -60,6 +60,7 @@ if (window.hljs) {
 
 
 
+
 <style type = "text/css">
 .main-container {
   max-width: 940px;
@@ -80,6 +81,9 @@ button.code-folding-btn:focus {
 }
 summary {
   display: list-item;
+}
+details > summary > p:only-child {
+  display: inline;
 }
 pre code {
   padding: 0;
@@ -232,7 +236,7 @@ $(document).ready(function () {
 <div class="navbar navbar-default  navbar-fixed-top" role="navigation">
   <div class="container">
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-target="#navbar" data-bs-target="#navbar">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
@@ -265,15 +269,42 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">CEM Lab</h1>
 
 </div>
 
 
-<p>The Communication and Emerging Media Lab (CEM Lab) is a collaborative research group that investigates the role of emerging communication technologies, such as Facebook, Twitter, YouTube, and TikTok, in the political discussion and engagement of the 21-century citizens. Based in the <a href="http://www.buffalo.edu/cas/communication.html">Department of Communication at the University at Buffalo</a> and the <a href="https://comm.uconn.edu/">Department of Communication at the University of Connecticut</a>, the CEM Lab is committed to facilitating faculty-student collaborative research.</p>
-<p>With emerging communication technologies intertwined with almost every aspect of social life, particularly our political life, we are interested in understanding how they shape people’s lived experiences. Particularly, we study how people use digital media to consume news and political information, learn about politics, discuss and share political content with others, and engage in the political process. Here, we see politics as relevant to almost all facets of our public and private lives, from voting, participation in social movements, to what we purchase and what lifestyle we adopt.</p>
-<p>Our methodological approach combines cutting-edge computational methods like NLP and network analysis with conventional quantitative methodologies such as surveys and experiments. We believe that this mixed-method approach can help us better understand the psychological mechanisms and behavioral patterns of people’s use of emerging communication technologies and their political and social implications.</p>
-<p>The CEM Lab is dedicated to providing an open, diverse, inclusive, and collaborative space for students interested in political communication to develop their research skills. Through close faculty mentoring and weekly meetings, students are involved in all phases of the research process including idea generation, research design, data collection, analyses, and writing. We hope such hands-on research experience will prepare graduate students to later conduct independent research as faculty.</p>
+<p><strong>The Communication and Emerging Media (CEM[kem]) Lab</strong>
+is a collaborative research group that investigates the role of emerging
+media, such as Facebook, Twitter, YouTube, and TikTok, in the political
+communication landscape of the 21st century. Based in the <a
+href="http://www.buffalo.edu/cas/communication.html">Department of
+Communication at the University at Buffalo</a> and the <a
+href="https://comm.uconn.edu/">Department of Communication at the
+University of Connecticut</a>, the CEM Lab is committed to facilitating
+faculty-student collaborative research.</p>
+<p>With emerging media intertwined with almost every aspect of social
+life, particularly our politics, we are interested in understanding how
+they shape people’s lived experiences. Particularly, we study how people
+use digital media to consume news and political information, learn about
+politics, discuss and share political content with others, and engage in
+the political process. Here, we see politics as relevant to almost all
+facets of our public and private lives, from voting and participation in
+social movements, to what we purchase and what lifestyle we adopt.</p>
+<p>Our methodological approach combines cutting-edge computational
+methods like NLP and network analysis with conventional quantitative
+methodologies such as surveys and experiments. We believe that this
+mixed-method approach can help us better understand the psychological
+mechanisms and behavioral patterns of people’s experiences with emerging
+media as well as the social and political implications of emerging
+media.</p>
+<p>The CEM Lab is dedicated to providing an open, diverse, inclusive,
+and collaborative space for students interested in political
+communication to develop their research skills. Through close faculty
+mentoring and weekly meetings, students are involved in all phases of
+the research process including idea generation, research design, data
+collection and analysis, and writing. We hope such hands-on research
+experience will prepare graduate students to later conduct independent
+research.</p>
 <p><img src="files/social_media.jpg" /></p>
 
 
