--- a/people.html
+++ b/people.html
@@ -13,8 +13,8 @@
 
 <title>people.knit</title>
 
-<script src="site_libs/header-attrs-2.9/header-attrs.js"></script>
-<script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
+<script src="site_libs/header-attrs-2.14/header-attrs.js"></script>
+<script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="site_libs/bootstrap-3.3.5/css/yeti.min.css" rel="stylesheet" />
 <script src="site_libs/bootstrap-3.3.5/js/bootstrap.min.js"></script>
@@ -60,6 +60,7 @@ if (window.hljs) {
 
 
 
+
 <style type = "text/css">
 .main-container {
   max-width: 940px;
@@ -80,6 +81,9 @@ button.code-folding-btn:focus {
 }
 summary {
   display: list-item;
+}
+details > summary > p:only-child {
+  display: inline;
 }
 pre code {
   padding: 0;
@@ -232,7 +236,7 @@ $(document).ready(function () {
 <div class="navbar navbar-default  navbar-fixed-top" role="navigation">
   <div class="container">
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-target="#navbar" data-bs-target="#navbar">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
@@ -276,35 +280,99 @@ $(document).ready(function () {
 <div id="yini-zhang-co-director" class="section level2">
 <h2>Yini Zhang (co-director)</h2>
 <p><img src="files/YiniZhang.jpg" style="width:30%; border:5px solid"></p>
-<p>Yini Zhang (Ph.D., University of Wisconsin-Madison) is an assistant professor in the Department of Communication at the University at Buffalo. She applies computational methods to the study of networked actors on social media, information flows across traditional and social media, and their implications for journalism and democracy. Her work has been published in journals such as <em>Journal of Communication</em>, <em>Journal of Computer-Mediated Communication</em>, and <em>New Media &amp; Society</em>.</p>
+<p>Yini Zhang (Ph.D., University of Wisconsin-Madison) is an assistant
+professor in the Department of Communication at the University at
+Buffalo. She applies computational methods to the study of networked
+actors on social media, information flows across traditional and social
+media, and their implications for journalism and democracy. Her work has
+been published in journals such as <em>Journal of Communication</em>,
+<em>Journal of Computer-Mediated Communication</em>, and <em>New Media
+&amp; Society</em>.</p>
 <p>contact: <a href="yzhang20@buffalo.edu">yzhang20@buffalo.edu</a></p>
 </div>
 <div id="jiyoun-suk-co-director" class="section level2">
 <h2>Jiyoun Suk (co-director)</h2>
 <p><img src="files/Jiyoun.jpeg" style="width:30%; border:5px solid"></p>
-<p>Jiyoun Suk (Ph.D., University of Wisconsin-Madison) is an Assistant Professor in the Department of Communication at the University of Connecticut. In her research, she looks at how the communication processes in the contemporary media environment shape social trust, activism, and political polarization, primarily employing computational methods. In particular, she is interested in how people understand different social groups marginalized communities. Her primary line of research examines the role of networked communications in bringing out voices of social justice and equality, as in the case of the #MeToo movement. She currently looks at how digital activism is contextualized across specific geographies and social media platforms.</p>
+<p>Jiyoun Suk (Ph.D., University of Wisconsin-Madison) is an Assistant
+Professor in the Department of Communication at the University of
+Connecticut. In her research, she looks at how the communication
+processes in the contemporary media environment shape social trust,
+activism, and political polarization, primarily employing computational
+methods. In particular, she is interested in how people understand
+different social groups marginalized communities. Her primary line of
+research examines the role of networked communications in bringing out
+voices of social justice and equality, as in the case of the #MeToo
+movement. She currently looks at how digital activism is contextualized
+across specific geographies and social media platforms.</p>
 <p>contact: <a href="jiyoun.suk@uconn.edu">jiyoun.suk@uconn.edu</a></p>
 </div>
 <div id="nojin-kwak-co-director" class="section level2">
 <h2>Nojin Kwak (co-director)</h2>
 <p><img src="files/Kwak.jpeg" style="width:30%; border:5px solid"></p>
-<p>Nojin Kwak (Ph.D., University of Wisconsin-Madison) is a professor in the Department of Communication at the University at Buffalo (UB), State University of New York. In addition, he currently serves as Vice Provost for International Education at UB. Kwak’s research centers on the role of communication media in civic and political engagement, and his recent studies analyze the impact of social media on community involvement, deliberative openness, and political participation. Kwak’s work has been published in top journals in the field, including <em>Communication Research</em>, <em>Journal of Communication</em>, <em>Human Communication Research</em>, <em>New Media and Society</em>, <em>Journal of Computer-Mediated Communication</em>, <em>Political Communication</em>, and <em>Political Research Quarterly</em>, and he has received numerous top paper awards at major conferences. Previously, Kwak was a professor and chair of the Department of Communication and Media at the University of Michigan.</p>
+<p>Nojin Kwak (Ph.D., University of Wisconsin-Madison) is a professor in
+the Department of Communication at the University at Buffalo (UB), State
+University of New York. In addition, he currently serves as Vice Provost
+for International Education at UB. Kwak’s research centers on the role
+of communication media in civic and political engagement, and his recent
+studies analyze the impact of social media on community involvement,
+deliberative openness, and political participation. Kwak’s work has been
+published in top journals in the field, including <em>Communication
+Research</em>, <em>Journal of Communication</em>, <em>Human
+Communication Research</em>, <em>New Media and Society</em>, <em>Journal
+of Computer-Mediated Communication</em>, <em>Political
+Communication</em>, and <em>Political Research Quarterly</em>, and he
+has received numerous top paper awards at major conferences. Previously,
+Kwak was a professor and chair of the Department of Communication and
+Media at the University of Michigan.</p>
 <p>contact: <a href="njkwak@buffalo.edu">njkwak@buffalo.edu</a></p>
-</div>
-<div id="zhiying-yue" class="section level2">
-<h2>Zhiying Yue</h2>
-<p><img src="files/Zhiying_Yue.jpg" style="width:30%; border:5px solid"></p>
-<p>Zhiying Yue is a doctoral candidate in the Department of Communication at the University at Buffalo. She researches social media use and its impact on psychological and physical well-being.</p>
 </div>
 <div id="rui-wang" class="section level2">
 <h2>Rui Wang</h2>
 <p><img src="files/Rui_Profile.JPG" style="width:30%; border:5px solid"></p>
-<p>Rui Wang is a current Ph.D. student in the Department of Communication at the University of Buffalo, earned her M.A. in Information and Communication Studies at Rutgers University. Her research focuses on media effects and persuasion, combining computational methods with experimental and survey designs. She is particularly interested in how new technology applied to journalism reshapes public perception. She is also interested in the effect of social media discussion on public attitudes and attention on health and politics. She had three-year teaching experience in the School of Journalism and Communication at Anhui Normal University.</p>
+<p>Rui Wang is a current Ph.D. student in the Department of
+Communication at the University of Buffalo, earned her M.A. in
+Information and Communication Studies at Rutgers University. Her
+research focuses on media effects and persuasion, combining
+computational methods with experimental and survey designs. She is
+particularly interested in how new technology applied to journalism
+reshapes public perception. She is also interested in the effect of
+social media discussion on public attitudes and attention on health and
+politics. She had three-year teaching experience in the School of
+Journalism and Communication at Anhui Normal University.</p>
 </div>
 <div id="xinxia-dong" class="section level2">
 <h2>Xinxia Dong</h2>
 <p><img src="files/IMG_6408.JPG" style="width:30%; border:5px solid"></p>
-<p>Xinxia Dong (M.A., Renmin University of China) is pursuing her Ph.D. in the Department of Communication at the University at Buffalo. Xinxia’s academic interests lie in risk communication and social media. Her current published work primarily examines the risk information seeking and processing (RISP) model. She is also passionate about exploring emerging media and learning various computational methods.</p>
+<p>Xinxia Dong (M.A., Renmin University of China) is pursuing her
+Ph.D. in the Department of Communication at the University at Buffalo.
+Xinxia’s academic interests lie in risk communication and social media.
+Her current published work primarily examines the risk information
+seeking and processing (RISP) model. She is also passionate about
+exploring emerging media and learning various computational methods.</p>
+</div>
+<div id="dongdong-yang" class="section level2">
+<h2>Dongdong Yang</h2>
+<p><img src="files/Dongdong-Yang-2018.jpeg" style="width:30%; border:5px solid"></p>
+<p>Dongdong Yang is an ABD in the Department of Communication at the
+University of Connecticut. She is interested in the use and effects of
+new communication technologies in a cross-cultural context.
+Specifically, her recent work investigates cross-cultural differences
+between Chinese and U.S. college students in social media picture
+editing, cute sticker use for impression management, and emoji use in
+online political discussion. She also examines how identity (e.g.,
+gender, fanship, etc.) influences perceptions and attitudes in sports
+communication.</p>
+<div id="alums" class="section level3">
+<h3>Alums:</h3>
+</div>
+</div>
+<div id="zhiying-yue" class="section level2">
+<h2>Zhiying Yue</h2>
+<p><img src="files/Zhiying_Yue.jpg" style="width:30%; border:5px solid"></p>
+<p>Zhiying Yue was a research assistant at the CEM lab. She researches
+social media use and its impact on psychological and physical
+well-being. She currently holds a post-doc position at the Harvard
+Medical School.</p>
 </div>
 
 
