--- a/projects.html
+++ b/projects.html
@@ -13,8 +13,8 @@
 
 <title>projects.knit</title>
 
-<script src="site_libs/header-attrs-2.9/header-attrs.js"></script>
-<script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
+<script src="site_libs/header-attrs-2.14/header-attrs.js"></script>
+<script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="site_libs/bootstrap-3.3.5/css/yeti.min.css" rel="stylesheet" />
 <script src="site_libs/bootstrap-3.3.5/js/bootstrap.min.js"></script>
@@ -60,6 +60,7 @@ if (window.hljs) {
 
 
 
+
 <style type = "text/css">
 .main-container {
   max-width: 940px;
@@ -80,6 +81,9 @@ button.code-folding-btn:focus {
 }
 summary {
   display: list-item;
+}
+details > summary > p:only-child {
+  display: inline;
 }
 pre code {
   padding: 0;
@@ -232,7 +236,7 @@ $(document).ready(function () {
 <div class="navbar navbar-default  navbar-fixed-top" role="navigation">
   <div class="container">
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-target="#navbar" data-bs-target="#navbar">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
@@ -277,35 +281,83 @@ $(document).ready(function () {
 <div id="mapping-the-social-media-ecosystem" class="section level3">
 <h3>Mapping the social media ecosystem</h3>
 <p><img src="files/Multi-platform.jpeg" style="width:100%; height: 10%"></p>
-<p>This project seeks to map out an ecosystem of social media that features both differentiation and interconnectedness. We focus on social media digital architecture, news media participation, and users’ repertoire of social media applications. Using the embedded links in the posts as well as the content that embedded the links, we examine how information flows across different social media platforms using two case studies.</p>
+<p>This project seeks to map out an ecosystem of social media that
+features both differentiation and interconnectedness. We focus on social
+media digital architecture, news media participation, and users’
+repertoire of social media applications. Using the embedded links in the
+posts as well as the content that embedded the links, we examine how
+information flows across different social media platforms using two case
+studies.</p>
 </div>
-<div id="keyword-selection-for-social-media-data-collection" class="section level3">
+<div id="keyword-selection-for-social-media-data-collection"
+class="section level3">
 <h3>Keyword selection for social media data collection</h3>
 <p><img src="files/data%20collection.jpeg" style="width:100%; height: 1%"></p>
-<p>For research on social media discourses, the keywords used to retrieve related social data content can greatly influence the findings. This project examines existing keyword selection practices in social media data collection and proposes a word-graph based snowball sampling approach for keyword selection.</p>
+<p>For research on social media discourses, the keywords used to
+retrieve related social data content can greatly influence the findings.
+This project examines existing keyword selection practices in social
+media data collection and proposes a word-graph based snowball sampling
+approach for keyword selection.</p>
 </div>
-<div id="the-politicization-and-polarization-of-the-metoo-movement" class="section level3">
+<div id="the-politicization-and-polarization-of-the-metoo-movement"
+class="section level3">
 <h3>The politicization and polarization of the #MeToo movement</h3>
 <p><img src="files/metoo.jpeg" style="width:100%"></p>
-<p>This project examines the composition of participants in the #MeToo movement and the discourses originating from them over time on Twitter. We seek to find whether the politically motivated participants crowded out moderates and used this movement as weapons in partisan arguments.</p>
+<p>This project examines the composition of participants in the #MeToo
+movement and the discourses originating from them over time on Twitter.
+We seek to find whether the politically motivated participants crowded
+out moderates and used this movement as weapons in partisan
+arguments.</p>
 </div>
-<div id="the-2020-us-presidential-election-study" class="section level3">
+<div id="the-2020-us-presidential-election-study"
+class="section level3">
 <h3>The 2020 US presidential election study</h3>
 <p><img src="files/2020_election.jpeg" style="width:100%"></p>
-<p>By conducting a two-wave panel study, we plan to examine how traditional and social media consumption influences people’s political beliefs and engagement.</p>
+<p>By conducting a two-wave panel study, we plan to examine how
+traditional and social media consumption influences people’s political
+beliefs and engagement.</p>
 </div>
 </div>
 <div id="completed" class="section level2">
 <h2>Completed:</h2>
-<div id="accumulation-of-influence-on-social-media" class="section level3">
+<div id="accumulation-of-influence-on-social-media"
+class="section level3">
 <h3>Accumulation of influence on social media</h3>
-<p>Though the use of social media by peripheral groups in society has received rising scholarly attention, it remains unclear how social media might contribute to their increased influence and how their social media activity evolves over time. In this project, we study actors’ strategic performance on social media, social media audience’s reaction, and news media amplification of their strategic performance, all of which might fuel each other to catapult peripheral actors to prominence.</p>
-<p>Through an analysis of 242 QAnon Twitter accounts using topic modeling and time series modeling, we find that QAnon accounts performed their group identity that helped them attract social media audience reaction, which in turn reinforced their group identity-based performance and drove news media amplification. These results highlight the implications of social media and news media for the normalization of peripheral actors and ideologies.</p>
+<p>Though the use of social media by peripheral groups in society has
+received rising scholarly attention, it remains unclear how social media
+might contribute to their increased influence and how their social media
+activity evolves over time. In this project, we study actors’ strategic
+performance on social media, social media audience’s reaction, and news
+media amplification of their strategic performance, all of which might
+fuel each other to catapult peripheral actors to prominence.</p>
+<p>Through an analysis of 242 QAnon Twitter accounts using topic
+modeling and time series modeling, we find that QAnon accounts performed
+their group identity that helped them attract social media audience
+reaction, which in turn reinforced their group identity-based
+performance and drove news media amplification. These results highlight
+the implications of social media and news media for the normalization of
+peripheral actors and ideologies.</p>
 </div>
 <div id="metoo-cross-platform-discourses" class="section level3">
 <h3>#MeToo cross-platform discourses</h3>
-<p>This project situates our analysis in discourses on sexual violence and gender justice activism on Twitter, Facebook, Instagram, and Reddit. We propose a three-pronged framework to understand discourses surrounding social media activism initiated by networked counterpublics: personal expression that raises public consciousness and fosters social support, calls to action that demand social changes, and contention that can either invigorate or stymie action. We use supervised machine learning to classify three discourses (networked acknowledgement, calls to action, and feminism contention) and apply time series analysis to model their interrelations.</p>
-<p>Results show that networked acknowledgment stimulates both calls to action and feminism contention and that calls to action predicts feminism contention across all platforms. Also, these discourses were more sensitive to various events on Twitter and Facebook, but more ephemeral and cyclical on Instagram and more persistent and mutually reinforcing on Reddit. These findings underscore the opportunities and challenges in social media activism and articulate cross-platform similarities and differences.</p>
+<p>This project situates our analysis in discourses on sexual violence
+and gender justice activism on Twitter, Facebook, Instagram, and Reddit.
+We propose a three-pronged framework to understand discourses
+surrounding social media activism initiated by networked counterpublics:
+personal expression that raises public consciousness and fosters social
+support, calls to action that demand social changes, and contention that
+can either invigorate or stymie action. We use supervised machine
+learning to classify three discourses (networked acknowledgement, calls
+to action, and feminism contention) and apply time series analysis to
+model their interrelations.</p>
+<p>Results show that networked acknowledgment stimulates both calls to
+action and feminism contention and that calls to action predicts
+feminism contention across all platforms. Also, these discourses were
+more sensitive to various events on Twitter and Facebook, but more
+ephemeral and cyclical on Instagram and more persistent and mutually
+reinforcing on Reddit. These findings underscore the opportunities and
+challenges in social media activism and articulate cross-platform
+similarities and differences.</p>
 </div>
 </div>
 
