--- a/publications.html
+++ b/publications.html
@@ -13,8 +13,8 @@
 
 <title>publications.knit</title>
 
-<script src="site_libs/header-attrs-2.9/header-attrs.js"></script>
-<script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
+<script src="site_libs/header-attrs-2.14/header-attrs.js"></script>
+<script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="site_libs/bootstrap-3.3.5/css/yeti.min.css" rel="stylesheet" />
 <script src="site_libs/bootstrap-3.3.5/js/bootstrap.min.js"></script>
@@ -60,6 +60,7 @@ if (window.hljs) {
 
 
 
+
 <style type = "text/css">
 .main-container {
   max-width: 940px;
@@ -80,6 +81,9 @@ button.code-folding-btn:focus {
 }
 summary {
   display: list-item;
+}
+details > summary > p:only-child {
+  display: inline;
 }
 pre code {
   padding: 0;
@@ -232,7 +236,7 @@ $(document).ready(function () {
 <div class="navbar navbar-default  navbar-fixed-top" role="navigation">
   <div class="container">
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-target="#navbar" data-bs-target="#navbar">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
@@ -274,13 +278,34 @@ $(document).ready(function () {
 <!-- --- -->
 <div id="under-review" class="section level2">
 <h2>UNDER REVIEW</h2>
-<p>Suk, J., Zhang, Y., Yue, Z., Wang, R., Dong, X., Yang, D., Lian, R. &amp; Kwak, N. (under review) When the Personal Becomes Political: Unpacking the Dynamics of Sexual Violence and Gender Justice Discourses across Four Social Media Platforms.</p>
-<p>Zhang, Y., Yue, Z., Yang, X., Chen, F. &amp; Kwak, N. (under review) How a Peripheral Ideology Becomes Prominent: Strategic Performance, Audience Reaction, and Media Amplification in the Case of QAnon Twitter Accounts.</p>
+<p>Suk, J., Zhang, Y., Yue, Z., Wang, R., Dong, X., Yang, D., Lian, R.
+&amp; Kwak, N. (under review) When the Personal Becomes Political:
+Unpacking the Dynamics of Sexual Violence and Gender Justice Discourses
+across Four Social Media Platforms.</p>
+<p>Zhang, Y., Yue, Z., Yang, X., Chen, F. &amp; Kwak, N. (under review)
+How a Peripheral Ideology Becomes Prominent: Strategic Performance,
+Audience Reaction, and Media Amplification in the Case of QAnon Twitter
+Accounts.</p>
 </div>
 <div id="conference-papers" class="section level2">
 <h2>CONFERENCE PAPERS</h2>
-<p>Suk, J., Zhang, Y., Yue, Z., Wang, R., Dong, X., Yang, D., Lian, R. &amp; Kwak, N. (2022). “The personal is political”: A cross-platform approach to how networked acknowledgment before and after #MeToo transforms into politicization. Paper accepted for the 2022 Annual Conference of ICA.</p>
-<p>Zhang, Y., Yue, Z., Yang, X., Chen, F. &amp; Kwak, N. (2022). Strategic Performance, Audience Feedback, and Media Amplification: An Analysis of the Behaviors and Influence of QAnon Twitter Accounts. Paper accepted for the 2022 Annual Conference of ICA.</p>
+<p>Zhang, Y., Suk, J., Yue, Z., An, Z., Yang, D., Wang, R., Dong, X.
+&amp; Joseph, K. (2022) Mapping out Information Flow in the Social Media
+Ecosystem by Tracing Hyperlinks. Paper accepted for presentation at the
+NCA 108th Annual Convention.</p>
+<p>Zhang, Y., Chen, F., Suk, J. &amp; Yue, Z. (2022) WordPPR: A New
+Keyword Selection Method for Social Media Data Retrieval. Paper
+presented at the fifth annual Politics and Computational Social Science
+(PaCSS), Boston, MA.</p>
+<p>Suk, J., Zhang, Y., Yue, Z., Wang, R., Dong, X., Yang, D., Lian, R.
+&amp; Kwak, N. (2022). “The personal is political”: A cross-platform
+approach to how networked acknowledgment before and after #MeToo
+transforms into politicization. Paper presented at the 2022 Annual
+Conference of ICA.</p>
+<p>Zhang, Y., Yue, Z., Yang, X., Chen, F. &amp; Kwak, N. (2022).
+Strategic Performance, Audience Feedback, and Media Amplification: An
+Analysis of the Behaviors and Influence of QAnon Twitter Accounts. Paper
+presented at the 2022 Annual Conference of ICA.</p>
 </div>
 
 
