--- a/people.html
+++ b/people.html
@@ -369,7 +369,7 @@ communication.</p>
 <div id="zhiying-yue" class="section level2">
 <h2>Zhiying Yue</h2>
 <p><img src="files/Zhiying_Yue.jpg" style="width:30%; border:5px solid"></p>
-<p>Zhiying Yue was a research assistant at the CEM lab. She researches
+<p>Zhiying Yue was a research assistant in the CEM lab. She researches
 social media use and its impact on psychological and physical
 well-being. She currently holds a post-doc position at the Harvard
 Medical School.</p>
