--- a/publications.html
+++ b/publications.html
@@ -279,12 +279,12 @@ $(document).ready(function () {
 <div id="under-review" class="section level2">
 <h2>UNDER REVIEW</h2>
 <p>Suk, J., Zhang, Y., Yue, Z., Wang, R., Dong, X., Yang, D., Lian, R.
-&amp; Kwak, N. (under review) When the Personal Becomes Political:
-Unpacking the Dynamics of Sexual Violence and Gender Justice Discourses
-across Four Social Media Platforms.</p>
-<p>Zhang, Y., Yue, Z., Yang, X., Chen, F. &amp; Kwak, N. (under review)
-How a Peripheral Ideology Becomes Prominent: Strategic Performance,
-Audience Reaction, and Media Amplification in the Case of QAnon Twitter
+&amp; Kwak, N. (R&amp;R) When the Personal Becomes Political: Unpacking
+the Dynamics of Sexual Violence and Gender Justice Discourses across
+Four Social Media Platforms.</p>
+<p>Zhang, Y., Yue, Z., Yang, X., Chen, F. &amp; Kwak, N. (R&amp;R) How a
+Peripheral Ideology Becomes Prominent: Strategic Performance, Audience
+Reaction, and Media Amplification in the Case of QAnon Twitter
 Accounts.</p>
 </div>
 <div id="conference-papers" class="section level2">
